--- a/styles/base.css
+++ b/styles/base.css
@@ -38,6 +38,11 @@ header li:last-child {
   margin-right: 0px;
 }
 
+header li a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
 /* common blocks */
 .dark {
   background: #111111;
