Changed: Bounded signature

--- a/styles/first.css
+++ b/styles/first.css
@@ -43,6 +43,7 @@
 /* animated signature */
 #signatureBox {
   min-width: 200px;
+  max-width: 500px;
   width: 20vw;
   height: 5vh;
   position: absolute;
