--- a/styles/first.css
+++ b/styles/first.css
@@ -35,9 +35,17 @@
   opacity: 0;
 }
 
+#intro .feature {
+  margin-bottom: 0;
+}
+
+#intro .subtitle {
+  margin-top: 0;
+}
+
 #intro .divider {
   opacity: 0;
-  margin-top: 6vh;
+  margin-top: 5vh;
 }
 
 /* animated signature */
