--- a/styles/text.css
+++ b/styles/text.css
@@ -37,6 +37,22 @@
   }
 }
 
+.subtitle {
+  font-size: 5vh;
+}
+
+@media screen and (max-height: 480px) {
+  .subtitle {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-height: 1200px) {
+  .subtitle {
+    font-size: 38px;
+  }
+}
+
 .text {
   font-size: 2vw;
   line-height: 3.5vw;
