--- a/styles/text.css
+++ b/styles/text.css
@@ -21,6 +21,7 @@
 }
 
 .feature {
+  font-family: 'Montserrat', 'Helvetica', sans-serif;
   font-size: 7vh;
   max-width: 400px;
 }
@@ -33,29 +34,25 @@
 
 @media screen and (min-height: 1200px) {
   .feature {
-    font-size: 50px;
+    font-size: 72px;
   }
 }
 
 .subtitle {
-  font-size: 5vh;
+  font-size: 14px;
 }
 
-@media screen and (max-height: 480px) {
-  .subtitle {
-    font-size: 24px;
-  }
-}
-
-@media screen and (min-height: 1200px) {
-  .subtitle {
-    font-size: 38px;
-  }
+.uppercased {
+  text-transform: uppercase;
 }
 
 .text {
   font-size: 2vw;
   line-height: 3.5vw;
+}
+
+.accented {
+  color: #66c75c;
 }
 
 @media screen and (max-width: 800px) {
