--- a/styles/base.css
+++ b/styles/base.css
@@ -39,14 +39,14 @@ header li:last-child {
 }
 
 header li a {
-  color: #66c75c;
+  color: #E9AC00;
   text-decoration: none;
   text-transform: uppercase;
 }
 
 /* common blocks */
 .dark {
-  background: #000000;
+  background: #111111;
   color: #FFFFFF;
 }
 
@@ -75,10 +75,10 @@ header li a {
 }
 
 .article a {
-  color: #66c75c;
+  color: #E9AC00;
   font-weight: 300;
   text-decoration: none;
-  border-bottom: 1px dotted #66c75c;
+  border-bottom: 1px dotted #E9AC00;
 }
 
 .centered {
