--- a/styles/base.css
+++ b/styles/base.css
@@ -39,7 +39,7 @@ header li:last-child {
 }
 
 header li a {
-  color: #E9AC00;
+  color: #FFFFFF;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -75,10 +75,10 @@ header li a {
 }
 
 .article a {
-  color: #E9AC00;
+  color: #ff69b4;
   font-weight: 300;
   text-decoration: none;
-  border-bottom: 1px dotted #E9AC00;
+  border-bottom: 1px dotted #ff69b4;
 }
 
 .centered {
