--- a/styles/base.css
+++ b/styles/base.css
@@ -75,10 +75,10 @@ header li a {
 }
 
 .article a {
-  color: #ff69b4;
+  color: #E9AC00;
   font-weight: 300;
   text-decoration: none;
-  border-bottom: 1px dotted #ff69b4;
+  border-bottom: 1px dotted #E9AC00;
 }
 
 .centered {
