--- a/styles/second.css
+++ b/styles/second.css
@@ -1,5 +1,5 @@
 #snowmobile {
-  background-image: url('https://scontent.fyzd1-1.fna.fbcdn.net/v/t31.0-8/13734921_10157062191785063_3342881495722452447_o.jpg?oh=34311491a94b41504b8572d62de8412a&oe=59BEF5E7');
+  background-image: url('/assets/index/snowmobile.jpg');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
