--- a/styles/base.css
+++ b/styles/base.css
@@ -14,7 +14,7 @@ div.page {
   border-bottom: 0.5rem solid #FFFFFF;
 }
 
-/* per page */
+/* first page */
 #hero {
   position: absolute;
   top: 0;
@@ -40,4 +40,15 @@ div.page {
 #intro p,
 #intro h4 {
   opacity: 0;
+}
+
+/* second page */
+section.bubbles {
+  margin: 2rem;
+}
+
+@media (min-width: 750px) {
+  section.bubbles {
+    margin: 2rem 30rem;
+  }
 }
