--- a/styles/base.css
+++ b/styles/base.css
@@ -66,3 +66,10 @@ section.third.page {
     padding: 5rem 0;
   }
 }
+
+/* fourth page */
+#pizza {
+  background-image: url('/assets/index/pizza.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
